Fixed layout collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -965,6 +965,16 @@ h1 {
     }
   }
 }
+.list-item {
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-weight: bold;
+  background-color: beige;
+  width: 240px;
+  display: inline-block;
+}
 
 .item-box {
   padding: 0.5em 1em;
@@ -973,6 +983,7 @@ h1 {
   margin-right: 20px;
   font-weight: bold;
   background-color: beige;
+  height: 420px;
   width: 240px;
   display: inline-block;
 }
